# claw-lang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  allocator.wat  proxy-call.wat  publish  test.wat
.github/ISSUE_TEMPLATE/: a--compilation-bug.md  a--compilation-error-or-crash.md  b--incorrect-compilation-issue.md  b--runtime-bug.md  c--feature-request.md  compilation-bug.md  feature_request.md  other-issue.md  runtime-bug.md
.github/workflows/: ci.yml
ci/: README.md  publish.rs
crates/ast/: Cargo.toml
crates/ast/src/: component.rs  expressions.rs  lib.rs  statements.rs  types.rs
crates/codegen/: Cargo.toml  build.rs
crates/codegen/src/: code.rs  component_builder.rs  expression.rs  function.rs  imports.rs  lib.rs  module.rs  statement.rs  types.rs
crates/codegen/src/builders/: component.rs  mod.rs  module.rs
crates/common/: Cargo.toml
crates/common/src/: diagnostic.rs  lib.rs  stack_map.rs
crates/common/tests/: miette.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/tests/: compile-error.rs  runtime.rs
crates/lib/tests/bad-programs/: adding-conflicting-types.claw  adding-conflicting-types.error.txt  global-without-annotation.claw  global-without-annotation.error.txt  global-without-initialization.error.txt  invalid-token.error.txt  modifying-immutable-global.claw  modifying-immutable-global.error.txt  modifying-immutable-local.claw  modifying-immutable-local.error.txt  param-local-type-mismatch.claw  param-local-type-mismatch.error.txt  using-unbound-name.claw  using-unbound-name.error.txt
crates/lib/tests/programs/: arithmetic.claw  claw.wit  compare.claw  factorial.claw  proxy_call.claw  strings.claw  timer-proxy.claw  unary.claw
crates/lib/tests/programs/wit/: claw.wit
crates/parser/: Cargo.toml
crates/parser/src/: component.rs  expressions.rs  lexer.rs  lib.rs  names.rs  statements.rs  types.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: expression.rs  function.rs  imports.rs  lib.rs  statement.rs  types.rs  wit.rs
crates/wasm-opt-wrapper/: Cargo.toml
crates/wasm-opt-wrapper/src/: lib.rs
docs/: Grammar.md  LanguageDesign.md  References.md  built-in-functions.md  exports.md  functions.md  imports.md  overview.md
docs/types/: booleans.md  enums.md  lists.md  numbers.md  records.md  resources.md  results.md  strings.md  tuples.md  variants.md
examples/: bad.wrt  befunge.wrt  fibonacci.wrt  increment.wrt  test_literals.wrt
notes/: Examples.md  Grammar.md  LanguageDesign.md  Planning.md
src/: ast.rs  bin.rs  codegen.rs  context.rs  id_map.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  source.rs  stack_map.rs
src/ast/: component.rs  expressions.rs  mod.rs  module.rs  statements.rs  types.rs
src/codegen/: expression.rs  mod.rs  module_builder.rs  statement.rs
src/ir/: mod.rs  type_graph.rs
src/parser/: component.rs  expressions.rs  mod.rs  module.rs  statements.rs  types.rs
src/resolver/: expressions.rs  functions.rs  mod.rs
tests/: input_to_output.rs  miette.rs  runtime.rs
tests/bad-programs/: global-without-initialization.claw  invalid-token.claw
tests/programs/: claw.wit  compare.claw  compare_u32.claw  counter.claw  counter_s64.claw  factorial.claw  identity.claw  increment_u32.claw  increment_u64.claw  increment_u64.wrt  max_u32.claw  min_u32.claw  proxy_call.claw  quadratic.claw  quadratic_f64.claw  quadratic_let_f64.claw  quadratic_let_f64.wrt  unary.claw
tests/sample_programs/: identity_u64.wat  identity_u64.wrt  increment_u32.wat  increment_u32.wrt  increment_u64.wat  increment_u64.wrt  min_u32.wat  min_u32.wrt  quadratic.wat  quadratic.wrt  quadratic_i64.wat  quadratic_i64.wrt  quadratic_let_i64.wat  quadratic_let_i64.wrt  return_param.wat  return_param.wrt
