[package]
name = "claw"
version = "0.1.2"
authors = ["Robin Brown"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = " The compiler for the Claw language "
repository = "https://github.com/esoterra/claw-lang"
readme = "README.md"

[lib]
name = "claw"
path = "src/lib.rs"

[[bin]]
name = "claw"
path = "src/bin.rs"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
thiserror = "1.0.30"
miette = { version = "3.3.0", features = ["fancy"] }
logos = "0.13.0"
petgraph = "0.6.4"
wasm-encoder = "0.38"
cranelift-entity = "0.104.0"

[dev-dependencies]
pretty_assertions = "1.1.0"
wasmtime = { version = "15.0.0", features = ["component-model"]}
wasmprinter = "0.2.75"
