[package]
name = "claw-cli"
description = "The compiler for the Claw language"
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "claw-cli"
path = "src/bin.rs"

[dependencies]
claw-common = { workspace = true }
claw-ast = { workspace = true }
claw-parser = { workspace = true }
claw-resolver = { workspace = true }
claw-codegen = { workspace = true }

clap = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
logos = { workspace = true }
wasm-encoder ={ workspace = true }
cranelift-entity = { workspace = true }
wat = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
wasmtime = { workspace = true }
wasmprinter = { workspace = true }

[workspace]
members = [
    "crates/ast",
    "crates/codegen",
    "crates/common",
    "crates/lib",
    "crates/parser",
    "crates/resolver",
]

[workspace.package]
version = "0.2.5"
authors = ["Robin Brown"]
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://claw-lang.dev/"
repository = "https://github.com/esoterra/claw-lang"

[workspace.dependencies]
claw-common = { path = "./crates/common", version = "0.2.5" }
claw-ast = { path = "./crates/ast", version = "0.2.5" }
claw-parser = { path = "./crates/parser", version = "0.2.5" }
claw-resolver = { path = "./crates/resolver", version = "0.2.5" }
claw-codegen = { path = "./crates/codegen", version = "0.2.5" }

clap = { version = "3.0.0-rc.7", features = ["derive"] }
thiserror = "1.0.30"
miette = { version = "7.1.0", features = ["fancy"] }
logos = "0.13.0"
wasm-encoder = "0.201"
cranelift-entity = "0.105.3"
wat = "1.201.0"
pretty_assertions = "1.1.0"
wasmtime = "18"
wasmprinter = "0.2.75"
wit-parser = "0.201.0"
