[package]
name = "claw-ast"
description = "The Claw language Abstract Syntax Tree (AST)"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { workspace = true }
claw-common = { workspace = true }
cranelift-entity = { workspace = true }
wit-parser = { workspace = true }
