[package]
name = "claw-codegen"
description = "The Claw language Wasm code generator"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
claw-ast = { workspace = true }
claw-resolver = { workspace = true }
wasm-encoder = { workspace = true }
cranelift-entity = { workspace = true }
wat = { workspace = true }
wasm-opt-wrapper = { workspace = true }
