[package]
name = "claw-resolver"
description = "The Claw language name and type resolver"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
claw-common = { workspace = true }
claw-ast = { workspace = true }